[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Ending.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 192, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 192, 24 )

[node name="Ending" type="Area2D"]
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Barrier" type="StaticBody2D" parent="."]
position = Vector2( 0, -72 )
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Ending_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
